cluster/apps/downloads/policy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: vpn-downloads
  namespace: downloads
spec:
  podSelector: {}
  ingress:
    - from:
        # Only allow ingress from K8S
        - ipBlock:
            cidr: 10.0.0.0/8
        # allow traffic from vpn gateway
        - ipBlock:
            cidr: ${SECRET_VPN_IP}
  egress:
    - to:
        # Only allow egress to K8S
        - ipBlock:
            cidr: 10.0.0.0/8
        # allow traffic to vpn gateway
        - ipBlock:
            cidr: ${SECRET_VPN_IP}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-ndots
  annotations:
    policies.kyverno.io/title: Add ndots
    policies.kyverno.io/category: Sample
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      The ndots value controls where DNS lookups are first performed in a cluster
      and needs to be set to a lower value than the default of 5 in some cases.
      This policy mutates all Pods to add the ndots option with a value of 1.
spec:
  rules:
    - name: add-ndots
      match:
        resources:
          kinds: [Pod]
          namespaces: [downloads]
      mutate:
        patchStrategicMerge:
          spec:
            dnsConfig:
              options:
                - name: ndots
                  value: "1"
